tests/other-tests/tests/expand_opts/fail/garbage.err.txt
error: expected one of `!` or `::`, found `<eof>`
 --> /tests/expand_opts/fail/garbage.rs:1:1
  |
1 | qwertyuiop
  | ^^^^^^^^^^ expected one of `!` or `::`
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
